--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Roboto|Oswald&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
